feat: add admin role registration
